scrollbar size correct

--- a/13/3/FileReader/src/MainForm.form
+++ b/13/3/FileReader/src/MainForm.form
@@ -35,7 +35,7 @@
               </grid>
             </constraints>
             <properties>
-              <text value="Type file name from res/    Shift + mouseWheel near the border to Jump"/>
+              <text value="data-18M.xml"/>
             </properties>
           </component>
         </children>
