--- a/13/3/FileReader/src/MainForm.form
+++ b/13/3/FileReader/src/MainForm.form
@@ -44,7 +44,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <verticalScrollBarPolicy value="20"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="bdc0b" class="javax.swing.JTextArea" binding="textArea">
