--- a/8-9 GUI/Chemical/src/MainFrame.form
+++ b/8-9 GUI/Chemical/src/MainFrame.form
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainFrame">
-  <grid id="27dc6" binding="rootPanel" custom-create="true" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="15" vgap="10">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="15" vgap="10">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties>
-      <background color="-12697791"/>
+      <background color="-65537"/>
+      <enabled value="false"/>
       <foreground color="-11714885"/>
       <inheritsPopupMenu value="false"/>
     </properties>
@@ -94,7 +95,7 @@
           </component>
         </children>
       </grid>
-      <grid id="968d6" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="968d6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -104,24 +105,23 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="ee334" class="javax.swing.JLabel" binding="info">
+          <scrollpane id="e589e">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="15" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value=""/>
+              <opaque value="false"/>
             </properties>
-          </component>
-          <vspacer id="39b2a">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <vspacer id="5a77">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
+            <border type="none"/>
+            <children>
+              <component id="b6123" class="javax.swing.JTextArea" binding="info">
+                <constraints/>
+                <properties>
+                  <opaque value="false"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <component id="ef9d6" class="javax.swing.JLabel" binding="owField">
@@ -152,7 +152,7 @@
           <text value="Неорганические"/>
         </properties>
       </component>
-      <component id="64fd1" class="javax.swing.JLabel" binding="substance">
+      <component id="64fd1" class="javax.swing.JLabel" binding="substanceName">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
