--- a/8-9 GUI/Chemical/src/Minerals.form
+++ b/8-9 GUI/Chemical/src/Minerals.form
@@ -14,7 +14,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <horizontalScrollBarPolicy value="31"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="6164c" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -31,7 +33,7 @@
                 </constraints>
                 <properties>
                   <font size="16"/>
-                  <text value="Минеральные вещества разделяют на три типа: макро, микро и ультрамикро элементы"/>
+                  <text value="Минеральные вещества разделяют на три типа: макро, микро и ультра-микро элементы"/>
                 </properties>
               </component>
               <grid id="4378a" binding="classifier" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
