--- a/14/phoneBook/src/main/resources/templates/index.html
+++ b/14/phoneBook/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
 
 
 
-    <div id="contactDiv"> <ul> </ul>
+    <div id="contactDiv">
         <div th:each="contact : ${Contacts}">
             <li class="contact" th:attr = "data-id=${contact.id}" th:text="${contact.name} +' '+ ${contact.phone}"></li>
         </div>
