--- a/14/PrintWorkTime/src/main/resources/templates/index.html
+++ b/14/PrintWorkTime/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <td th:text = "${entry.getKey()}"></td>
             <td th:each="row : ${entry.getValue()}" th:attr="style='text-align:center'" th:switch="${row.toString().length()}">
                 <span th:case="0">
-                    <span  th:attr="style='color:blue'">Work out</span>
+                    <span  th:attr="style='color:blue'">Out of work</span>
                 </span>
                 <span th:case="*">
                     <span th:text="${row}"></span>
