--- a/15/Forms/src/main/resources/templates/index.html
+++ b/15/Forms/src/main/resources/templates/index.html
@@ -14,27 +14,30 @@
 <h3>My form</h3>
 
     <form class="form" id="form" action="/templates" method="post" th:object="${person}"> <br>
-        <span th:if="${#fields.hasErrors('name')}" th:errors="${person.name}" th:attr="style='color:red'"></span>
-        <table id="table" align="center">
+        <table id="table" align="center" width="750">
             <tr>
                 <td><label for="surname">Фамилия</label></td>
                 <td><input class="formfield" type="text" id="surname" name="surname" size="40"></td>
+                <td width="300"><em th:if="${#fields.hasErrors('surname')}" th:errors="${person.surname}" th:attr="style='color:red; font-size: 70%'"></em></td>
             </tr>
             <tr>
                 <td><label for="name">Имя</label></td>
                 <td><input class="formfield" type="text" id="name" name="name" size="40"></td>
+                <td><em th:if="${#fields.hasErrors('name')}" th:errors="${person.name}" th:attr="style='color:red; font-size: 70%'"></em></td>
             </tr>
             <tr>
                 <td><label for="patronymic">Отчество</label></td>
                 <td><input class="formfield" type="text" id="patronymic" name="patronymic" size="40"></td>
+                <td><em th:if="${#fields.hasErrors('patronymic')}" th:errors="${person.patronymic}" th:attr="style='color:red; font-size: 70%'"></em></td>
             </tr>
             <tr>
-                <td>Дата рождения </td>
+                <td >Дата рождения </td>
                 <td align="right"><input class="formfield" type="date" size="30" name="birthday"></td>
             </tr>
             <tr>
                 <td> Номер для связи </td>
                 <td align="right"><input  class="formfield" type="tel" name="phone" pattern="8[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="Формат: 8000-000-00-00" size="22"></td>
+                <td><em th:if="${#fields.hasErrors('phone')}" th:errors="${person.phone}" th:attr="style='color:red; font-size: 70%'"></em></td>
             </tr>
             <tr>
                 <td>Фото паспорта</td>
