--- a/15/Forms/src/main/resources/templates/index.html
+++ b/15/Forms/src/main/resources/templates/index.html
@@ -31,13 +31,14 @@
                 <td><em th:if="${#fields.hasErrors('patronymic')}" th:errors="${person.patronymic}" th:attr="style='color:red; font-size: 70%'"></em></td>
             </tr>
             <tr>
-                <td >Дата рождения </td>
-                <td align="right"><input class="formfield" type="date" size="30" name="birthday"></td>
-            </tr>
-            <tr>
                 <td> Номер для связи </td>
                 <td align="right"><input  class="formfield" type="tel" name="phone" pattern="8[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="Формат: 8000-000-00-00" size="22"></td>
                 <td><em th:if="${#fields.hasErrors('phone')}" th:errors="${person.phone}" th:attr="style='color:red; font-size: 70%'"></em></td>
+            </tr>
+            <tr>
+                <td >Дата рождения </td>
+                <td align="right"><input class="formfield" type="date" size="30" name="birthday"></td>
+                <td><em th:if="${#fields.hasErrors('birthday')}" th:errors="${person.birthday}" th:attr="style='color:red; font-size: 70%'"></em></td>
             </tr>
             <tr>
                 <td>Фото паспорта</td>
